--- a/render.yaml
+++ b/render.yaml
@@ -6,4 +6,4 @@ services:
       apt-get update && apt-get install -y ffmpeg
       pip install -r requirements.txt
     startCommand: python app.py
-    autoDeploy: true
+    plan: free
