--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,8 @@
 services:
   - type: web
     name: yt-downloader
-    env: python
-    buildCommand: |
-      apt-get update && apt-get install -y ffmpeg
-      pip install -r requirements.txt
-    startCommand: python app.py
+    env: docker
     plan: free
+    region: singapore
+    branch: main
+    dockerfilePath: ./Dockerfile
